WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73793
CSSStyleSheet can't be reparented, enforce this at compile time.
https://bugs.webkit.org/show_bug.cgi?id=73793
Summary
CSSStyleSheet can't be reparented, enforce this at compile time.
Andreas Kling
Reported
2011-12-04 19:17:16 PST
We should replace CSSStyleSheet's setParentRule() by clearParentRule() to enforce the fact that CSSStyleSheet can't be moved to another parent rule after creation.
Attachments
Patch
(7.30 KB, patch)
2011-12-04 20:52 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-12-04 20:52:11 PST
Created
attachment 117835
[details]
Patch
Benjamin Poulain
Comment 2
2011-12-04 21:26:01 PST
Comment on
attachment 117835
[details]
Patch The pach looks good. I am unfamiliar with the naming preference owner/parentRule but that seem consistent with CSSOM.
Andreas Kling
Comment 3
2011-12-04 21:44:08 PST
Comment on
attachment 117835
[details]
Patch Clearing flags on attachment: 117835 Committed
r101972
: <
http://trac.webkit.org/changeset/101972
>
Andreas Kling
Comment 4
2011-12-04 21:44:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug