Source/WebCore/css/CSSStyleSheet.h
@@ -66,7 +66,6 @@ public:
         return static_cast<CSSStyleSheet*>(parentSheet);
     }
 
-    CSSImportRule* ownerRule() const { return parentRule(); }
     PassRefPtr<CSSRuleList> cssRules(bool omitCharsetRules = false);
     unsigned insertRule(const String& rule, unsigned index, ExceptionCode&);
     void deleteRule(unsigned index, ExceptionCode&);
