Source/WebCore/css/StyleSheet.h
@@ -39,13 +39,13 @@ public:
     bool disabled() const { return m_disabled; }
     void setDisabled(bool);
 
-    Node* ownerNode() const { return m_parentNode; }
-    void clearOwnerNode() { m_parentNode = 0; }
+    Node* ownerNode() const { return m_ownerNode; }
+    void clearOwnerNode() { m_ownerNode = 0; }
+
+    CSSImportRule* ownerRule() const { return m_ownerRule; }
+    void clearOwnerRule() { m_ownerRule = 0; }
 
     StyleSheet* parentStyleSheet() const;
-
-    CSSImportRule* parentRule() const { return m_parentRule; }
-    void setParentRule(CSSImportRule* rule) { m_parentRule = rule; }
 
     // Note that href is the URL that started the redirect chain that led to
     // this style sheet. This property probably isn't useful for much except
@@ -76,8 +76,8 @@ protected:
 
 private:
     bool m_disabled;
-    CSSImportRule* m_parentRule;
-    Node* m_parentNode;
+    CSSImportRule* m_ownerRule;
+    Node* m_ownerNode;
     String m_originalURL;
     KURL m_finalURL;
     String m_strTitle;
